<resources>
    <string name="app_name">Popularity</string>
    <string name="app_version">version 1.0.0 -beta01</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="intro_message_one">In this app, we want you and your
        friends to get to know each other more and interact
        better with each other and become better friends.</string>

    <string name="intro_message_two">You can tell your friends what you think about them, if you want to do it indirectly.\n
        And you can see your friends comments about yourself</string>
    <string name="intro_message_three">And you can share these comments on social media</string>
    <string name="intro_message_four">This will help you get to know the positive and negative points of your
        personality and work towards improving it, as well as giving your friends the opportunity.</string>

    <string name="app_language">Language</string>
    <string name="app_intro">App Intro</string>

    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="start">start</string>

    <string name="phone_number_validation">please enter correct phone number</string>
    <string name="verify_code_validation">please check your sms inbox and enter verify code</string>
    <string name="full_name_username_validation">please enter correct information</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="rec_search">RecyclerView Search</string>
    <string name="share_your_rates">Share Your Rates</string>


    <string name="gallery_hint_get_permissions">please confirm access gallery permissions for better performance.</string>
    <string name="hint_get_permissions">please confirm these permissions for better performance.</string>
    <string name="hint_you_should_confirm_permissions">you should confirm permissions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="setting">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_to_friends">Rate</string>
    <string name="share">Share</string>
    <string name="choose_app">Choose an app</string>
    <string name="error_under_construction">This part is under construction!</string>
    <string name="about_us_desc">we are very good people who love making
        application and now we made it, we made popularity application in grady way, and we are so
        confused that how we made it, but the important thing is that done it quickly and now in
        this whole world we are the people made our goal and have fun with it.
        </string>

    <string name="about_us_team_member">our team members : \n Zahra Mousavi \n Mohammad Hadi</string>
    <string name="privacy_policy_desc">
     the Many privacy laws around the world require businesses to provide their
        customers with a Privacy Policy. Privacy law is becoming stricter all the time,
        and intrusive mobile technology is a big reason for this.
        It\'s highly likely that you will need to comply with privacy
        law if you develop or publish a mobile app.
        Here are some examples of countries and regions with privacy
        laws that require all or some businesses to
        publish a Privacy Policy United States (US): Most notably,
        laws such as the California Online Privacy Act (CalOPPA) and
        the California Consumer Privacy Act (CCPA) European Union (EU):
        The General Data Protection Regulation (GDPR) and the ePrivacy Directive
        Unied Kingdom (UK): The GDPR, Privacy in Electronic Communications Regulations
        (PECRs) and Data Protection Act 2018 Canada: Personal Information and Privacy
        of Electronic Documents Act (PIPEDA) Australia: Privacy Act South
        Africa: Processing of Personal Information Act (POPI Act) </string>

    <string name="rate_look">Look</string>
    <string name="rate_fitness">Fitness</string>
    <string name="rate_style">Style</string>
    <string name="rate_personality">Personality</string>
    <string name="rate_trustworthy">Trustworthy</string>
    <string name="rate_popularity">Popularity</string>
    <string name="rate_to">What you think about your friend</string>
    <string name="submit">Submit Rates</string>
    <string name="rate_done">Rate Done !!</string>
    <string name="okay">OKAY</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submitted_rates">Rates Submitted Successfully</string>
    <string name="some_problems_when_use_api">There was some problem …</string>

    <!--ToolBarTitles-->
    <string name="login_toolbar_txt">Login methods</string>

    <string name="home_toolbar_txt">Home</string>
    <string name="about_us_toolbar_txt">About Us</string>
    <string name="privacy_policy_toolbar_txt">Privacy Policy</string>
    <string name="rate_toolbar">Rate To Friends</string>
    <string name="empty"></string>
    <string name="rate_before">You Rate to this Friend Before</string>
    <string name="login_way_description"> welcome to popularity.\nplease choose your data source…</string>
    <string name="login_with_phone_number_description">enter your mobile number which you want to login with</string>
    <string name="register_description">submit your base data to register it the world of popularity</string>


    <!--errors-->
    <string name="error_api_call">There was a problem sending the request to the server.</string>
    <string name="error_disconnected">Disconnected</string>


    <string name="login_with_instagram_btn_txt">Login with Instagram</string>
    <string name="login_with_twitter_btn_txt">Login Twitter</string>
    <string name="login_with_facebook_btn_txt">Login with FaceBook</string>
    <string name="login_with_phone_number_btn_txt">Login With Phone Number</string>
    <string name="login_with_mock_btn_txt">Login With Mock</string>

    <string name="hint_verify_code">verify code</string>
    <string name="network_connection_error">Please check your connection</string>
    <string name="error_receive_code">you should get a code..</string>
    <string name="rate_to_friend">Rate To:</string>
    <string name="copy_right">copy right all reserved</string>
    <string name="send_sms_btn_txt">Send SMS</string>
    <string name="verify_code">Verify code</string>
    <string name="phone_contacts">Phone Contacts :</string>

    <string name="login_twitter_btn_text">Login Twitter</string>
    <string name="fallow_us">fallow us in social medias : </string>
    <string name="phone_number_logout">Logout Phone </string>
    <string name="btn_setting_login_twitter">Login Twitter </string>

    <string name="phone_number">Phone Number </string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="logout_submit">Are you sure for logout?</string>

    <string name="share_desc">you can share this on your social network or send it to
    your friends and inviting them to popularity have chance to see more result about yourself </string>
    <string name="rate_submit_description">you rate to your friend done successfully
        he she will see the result when she login to his her popularity account
        but would not distinguish who rate him her</string>


    <string name="image_hint_navigation_toolbar">this button open drawer menu for more navigation control.</string>
    <string name="search_friend">Search Friend</string>
    <string name="back_button_press_hint">are you sure exit application?</string>
    <string name="save">Save</string>
    <string name="update_message">Please update application for the best performance.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

