<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="330dp"
    style="@style/CardViewStyle"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    style="@style/PrimaryTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_done" />

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="50dp"
                    android:src="@drawable/ic_done_badget_primary" />
            </LinearLayout>


            <TextView
                style="@style/SecondaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/rate_submit_description"
                 />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRateDone"
                style="@style/AccentButtonStyle"
                android:text="@string/okay" />


        </LinearLayout>


</androidx.cardview.widget.CardView>