<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    style="@style/CardViewStyle"
    android:orientation="vertical">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:orientation="vertical"
            >





            <TextView
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/logout_submit"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnYes"
                    style="@style/AccentButtonStyle"
                    android:text="@string/yes" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/AccentButtonStyle"
                    android:text="@string/no" />
            </LinearLayout>

           <!-- <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRateDone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                style="@style/AccentButtonStyle"
                android:text="@string/okay" />-->


        </LinearLayout>


</androidx.cardview.widget.CardView>