<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
    <!--auth header-->
    <include layout="@layout/layout_auth_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <!--enter mobile layout-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMobileRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/main_cardview_content_margin"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/main_cardview_content_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/main_cardview_inside_padding"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    style="@style/SecondaryTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="@dimen/main_cardview_inside_padding"
                    android:text="@string/login_with_phone_number_description" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textSize="@dimen/normal_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnReceiveCode"
                    style="@style/AccentButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_btn_height"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/send_sms_btn_txt" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!--verify code layout-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/main_cardview_content_margin"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/main_cardview_content_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/main_cardview_inside_padding"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    style="@style/SecondaryTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/main_cardview_inside_padding"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_with_phone_number_description" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtVerifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:hint="@string/hint_verify_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnVerifyCode"
                    style="@style/AccentButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_code" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--footer version-->
        <include layout="@layout/layout_footer_version" />
    </RelativeLayout>

</LinearLayout>